--- a/www/plugins/demo/casemanager/controllers/casepriority/update.htm
+++ b/www/plugins/demo/casemanager/controllers/casepriority/update.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('demo/casemanager/casecontroller') ?>">CaseController</a></li>
+        <li><a href="<?= Backend::url('demo/casemanager/casepriority') ?>">CasePriority</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
@@ -33,28 +33,16 @@
                     class="btn btn-default">
                     <?= e(trans('backend::lang.form.save_and_close')) ?>
                 </button>
-
-                    <button
-                            type="button"
-                            class="btn btn-default"
-                            data-request="onSubmit"
-                            data-hotkey="ctrl+shift+enter, cmd+shift+enter"
-                            data-request-flash
-                            data-load-indicator="<?= e(trans('demo.casemanager::lang.workflow.submit')) ?>"
-                            data-request-confirm="<?= e(trans('demo.casemanager::lang.workflow.confirm_push')) ?>">
-                        <?= e(trans('demo.casemanager::lang.workflow.push')) ?>
-                    </button>
-
                 <button
-                        type="button"
-                        class="oc-icon-trash-o btn-icon danger pull-right"
-                        data-request="onDelete"
-                        data-load-indicator="<?= e(trans('backend::lang.form.deleting')) ?>"
-                        data-request-confirm="<?= e(trans('backend::lang.form.confirm_delete')) ?>">
+                    type="button"
+                    class="oc-icon-trash-o btn-icon danger pull-right"
+                    data-request="onDelete"
+                    data-load-indicator="<?= e(trans('backend::lang.form.deleting')) ?>"
+                    data-request-confirm="<?= e(trans('backend::lang.form.confirm_delete')) ?>">
                 </button>
 
                 <span class="btn-text">
-                    <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('demo/casemanager/casecontroller') ?>"><?= e(trans('backend::lang.form.cancel')) ?></a>
+                    <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('demo/casemanager/casepriority') ?>"><?= e(trans('backend::lang.form.cancel')) ?></a>
                 </span>
             </div>
         </div>
@@ -62,5 +50,5 @@
 
 <?php else: ?>
     <p class="flash-message static error"><?= e(trans($this->fatalError)) ?></p>
-    <p><a href="<?= Backend::url('demo/casemanager/casecontroller') ?>" class="btn btn-default"><?= e(trans('backend::lang.form.return_to_list')) ?></a></p>
+    <p><a href="<?= Backend::url('demo/casemanager/casepriority') ?>" class="btn btn-default"><?= e(trans('backend::lang.form.return_to_list')) ?></a></p>
 <?php endif ?>
