--- a/www/plugins/demo/casemanager/controllers/casecontroller/_list_toolbar.htm
+++ b/www/plugins/demo/casemanager/controllers/casecontroller/_list_toolbar.htm
@@ -1,19 +1,45 @@
 <div data-control="toolbar">
-        <a href="<?= Backend::url('demo/casemanager/casecontroller/create') ?>" class="btn btn-primary oc-icon-plus"><?= e(trans('backend::lang.form.create')) ?></a>
-            <a href="<?= Backend::url('demo/casemanager/casecontroller/reorder') ?>" class="btn btn-default oc-icon-list"><?= e(trans('backend::lang.reorder.default_title')) ?></a>
-        <button
-        class="btn btn-default oc-icon-trash-o"
-        disabled="disabled"
-        onclick="$(this).data('request-data', {
+    <a href="<?= Backend::url('demo/casemanager/casecontroller/create') ?>"
+       class="btn btn-primary oc-icon-plus"><?= e(trans('backend::lang.form.create')) ?></a>
+    <a href="<?= Backend::url('demo/casemanager/casecontroller/reorder') ?>"
+       class="btn btn-default oc-icon-list"><?= e(trans('backend::lang.reorder.default_title')) ?></a>
+    <button
+            class="btn btn-default oc-icon-trash-o"
+            disabled="disabled"
+            onclick="$(this).data('request-data', {
             checked: $('.control-list').listWidget('getChecked')
         })"
-        data-request="onDelete"
-        data-request-confirm="<?= e(trans('backend::lang.list.delete_selected_confirm')) ?>"
-        data-trigger-action="enable"
-        data-trigger=".control-list input[type=checkbox]"
-        data-trigger-condition="checked"
-        data-request-success="$(this).prop('disabled', true)"
-        data-stripe-load-indicator>
+            data-request="onDelete"
+            data-request-confirm="<?= e(trans('backend::lang.list.delete_selected_confirm')) ?>"
+            data-trigger-action="enable"
+            data-trigger=".control-list input[type=checkbox]"
+            data-trigger-condition="checked"
+            data-request-success="$(this).prop('disabled', true)"
+            data-stripe-load-indicator>
         <?= e(trans('backend::lang.list.delete_selected')) ?>
     </button>
+    <select id="queueDropdown" class="form-control custom-select select2-hidden-accessible">
+        <?php
+        $queues = $this->getQueuesForCurrentUser();
+        foreach($queues as $queue){
+        ?>
+        <option value="<?=$queue->id?>"><?=$queue->name?></option>
+
+        <?php
+    }
+    ?>
+    </select>
+    <button
+            type="button"
+            class="btn btn-default"
+            id="casePicker">
+        Pick Case
+    </button>
 </div>
+<script>
+    $('#casePicker').click(function () {
+        $.request('onPickItemFromQueue', {
+            data: {queueId: $('#queueDropdown').val()}
+        });
+    });
+</script>
