--- a/www/plugins/demo/casemanager/controllers/casecontroller/update.htm
+++ b/www/plugins/demo/casemanager/controllers/casecontroller/update.htm
@@ -9,58 +9,61 @@
 
     <?= Form::open(['class' => 'layout']) ?>
 
-        <div class="layout-row">
-            <?= $this->formRender() ?>
-        </div>
+    <div class="layout-row">
+        <?= $this->formRender() ?>
+    </div>
 
-        <div class="form-buttons">
-            <div class="loading-indicator-container">
-                <button
+    <div class="form-buttons">
+        <div class="loading-indicator-container">
+            <button
                     type="submit"
                     data-request="onSave"
                     data-request-data="redirect:0"
                     data-hotkey="ctrl+s, cmd+s"
                     data-load-indicator="<?= e(trans('backend::lang.form.saving')) ?>"
                     class="btn btn-primary">
-                    <?= e(trans('backend::lang.form.save')) ?>
-                </button>
-                <button
+                <?= e(trans('backend::lang.form.save')) ?>
+            </button>
+            <button
                     type="button"
                     data-request="onSave"
                     data-request-data="close:1"
                     data-hotkey="ctrl+enter, cmd+enter"
                     data-load-indicator="<?= e(trans('backend::lang.form.saving')) ?>"
                     class="btn btn-default">
-                    <?= e(trans('backend::lang.form.save_and_close')) ?>
-                </button>
-
-                    <button
-                            type="button"
-                            class="btn btn-default"
-                            data-request="onSubmit"
-                            data-hotkey="ctrl+shift+enter, cmd+shift+enter"
-                            data-request-flash
-                            data-load-indicator="<?= e(trans('demo.casemanager::lang.workflow.submit')) ?>"
-                            data-request-confirm="<?= e(trans('demo.casemanager::lang.workflow.confirm_push')) ?>">
-                        <?= e(trans('demo.casemanager::lang.workflow.push')) ?>
-                    </button>
-
+                <?= e(trans('backend::lang.form.save_and_close')) ?>
+            </button>
+            <?php if ($this->user->hasAccess('workflow.item.push')) { ?>
                 <button
                         type="button"
-                        class="oc-icon-trash-o btn-icon danger pull-right"
-                        data-request="onDelete"
-                        data-load-indicator="<?= e(trans('backend::lang.form.deleting')) ?>"
-                        data-request-confirm="<?= e(trans('backend::lang.form.confirm_delete')) ?>">
+                        class="btn btn-default"
+                        data-request="onSubmit"
+                        data-hotkey="ctrl+shift+enter, cmd+shift+enter"
+                        data-request-flash
+                        data-load-indicator="<?= e(trans('demo.casemanager::lang.workflow.submit')) ?>"
+                        data-request-confirm="<?= e(trans('demo.casemanager::lang.workflow.confirm_push')) ?>">
+                    <?= e(trans('demo.casemanager::lang.workflow.push')) ?>
                 </button>
+            <?php } ?>
 
-                <span class="btn-text">
-                    <?= e(trans('backend::lang.form.or')) ?> <a href="<?= Backend::url('demo/casemanager/casecontroller') ?>"><?= e(trans('backend::lang.form.cancel')) ?></a>
+            <button
+                    type="button"
+                    class="oc-icon-trash-o btn-icon danger pull-right"
+                    data-request="onDelete"
+                    data-load-indicator="<?= e(trans('backend::lang.form.deleting')) ?>"
+                    data-request-confirm="<?= e(trans('backend::lang.form.confirm_delete')) ?>">
+            </button>
+
+            <span class="btn-text">
+                    <?= e(trans('backend::lang.form.or')) ?> <a
+                        href="<?= Backend::url('demo/casemanager/casecontroller') ?>"><?= e(trans('backend::lang.form.cancel')) ?></a>
                 </span>
-            </div>
         </div>
+    </div>
     <?= Form::close() ?>
 
 <?php else: ?>
     <p class="flash-message static error"><?= e(trans($this->fatalError)) ?></p>
-    <p><a href="<?= Backend::url('demo/casemanager/casecontroller') ?>" class="btn btn-default"><?= e(trans('backend::lang.form.return_to_list')) ?></a></p>
+    <p><a href="<?= Backend::url('demo/casemanager/casecontroller') ?>"
+          class="btn btn-default"><?= e(trans('backend::lang.form.return_to_list')) ?></a></p>
 <?php endif ?>
