--- a/www/plugins/demo/report/controllers/reportcontroller/_report_renderer.htm
+++ b/www/plugins/demo/report/controllers/reportcontroller/_report_renderer.htm
@@ -5,7 +5,7 @@
     $this->addJs($file);
 } ?>
 <?php $this->addJs('/plugins/demo/report/controllers/reportcontroller/assets/js/report.data.js') ?>
-<div id="report-container-<?= $report->id ?>" style="width: 100%;height: 100%;"></div>
+<div id="report-container-<?= $report->id ?>" style="height: 100%;"></div>
 <script>
     var report = new Report(<?=$report->id?>);
     report.fetchAndRender();
