Added preview option

--- a/www/plugins/demo/report/controllers/reportcontroller/_report_renderer.htm
+++ b/www/plugins/demo/report/controllers/reportcontroller/_report_renderer.htm
@@ -5,7 +5,11 @@
     $this->addJs($file);
 } ?>
 <?php $this->addJs('/plugins/demo/report/controllers/reportcontroller/assets/js/report.data.js') ?>
-<div id="report-container-<?= $report->id ?>" style="height: 100%;"></div>
+<?php if ($preview === true) { ?>
+    <a href="../render-report/<?= $report->id ?>" style="margin: 0;auto;">View</a>
+<?php } ?>
+<div id="report-container-<?= $report->id ?>" style="height: 100%;width: 100%;"></div>
+
 <script>
     var report = new Report(<?=$report->id?>);
     report.fetchAndRender();
