--- a/www/plugins/demo/report/controllers/reportcontroller/update.htm
+++ b/www/plugins/demo/report/controllers/reportcontroller/update.htm
@@ -41,6 +41,7 @@
                     data-request="onPreview"
                     data-load-indicator="Loading"
                     data-request-update="report_renderer: '#previewModal .modal-body'"
+                    data-hotkey="ctrl+p, cmd+p"
                     class="btn btn-default">
                 Preview
             </button>
