--- a/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
+++ b/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
@@ -5,7 +5,7 @@
 <?php if ($preview === true) { ?>
     <a href="../render-dashboard/<?= $dashboard->slug ?>" style="margin: 0;auto;">View</a>
 <?php } ?>
-<div id="dashboard-container-<?= $dashboard->id ?>" style="height: 100%;width: 100%;">
+<div id="dashboard-container-<?= $dashboard->id ?>" style="height: 100%;width: 100%;" class="dashboard-container">
     <div class="grid-stack">
         <?php
         foreach ($dashboard->reports_config as $config) {
@@ -27,13 +27,59 @@
         ?>
     </div>
 </div>
+<div id="ReportContainer-container-toolbar" class="dashboard-toolbar">
+    <div class="dropdown dropup">
+        <a href="javascript:;" class="manage-widgets" data-toggle="dropdown">
+            <i class="icon-cogs"></i> Manage widgets </a>
+
+        <ul class="dropdown-menu" role="menu" data-dropdown-title="Manage dashboard">
+            <li role="presentation">
+                <a role="menuitem" href="javascript:;" data-control="popup"
+                   data-handler="reportContainer::onLoadAddPopup" class="oc-icon-plus" tabindex="-1">
+                    Add widget </a>
+            </li>
+            <li role="separator" class="divider"></li>
+            <li role="presentation">
+                <a role="menuitem" href="javascript:;" class="oc-icon-floppy-o save-dashboard" data-hotkey="ctrl+enter, cmd+enter">
+                    Save </a>
+            </li>
+            <li role="presentation">
+                <a role="menuitem" href="javascript:;"
+                   data-request-success="$(window).trigger('oc.reportWidgetRefresh')"
+                   data-request="reportContainer::onResetWidgets" data-request-confirm="Reset layout back to default?"
+                   class="oc-icon-repeat" tabindex="-1">
+                    Reset layout </a>
+            </li>
+        </ul>
+    </div>
+</div>
 <style>
     .grid-stack {
         width: 100%;
         height: 100%;
     }
+
+    .dashboard-toolbar {
+        position: absolute;
+        bottom: 2px;
+    }
+
+    .dashboard-toolbar .manage-widgets {
+        display: inline-block;
+        color: #bcc3c7;
+        padding: 10px 15px;
+        font-size: 14px;
+        font-weight: 400;
+        border: 1px dashed #bcc3c7;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        margin-left: 5px;
 </style>
 <script>
     var dashboard = new Dashboard('<?= $dashboard->id ?>');
     dashboard.render();
+    $('.dashboard-toolbar .save-dashboard').click(function () {
+        dashboard.save();
+    });
 </script>
