--- a/www/plugins/demo/report/controllers/dashboardcontroller/update.htm
+++ b/www/plugins/demo/report/controllers/dashboardcontroller/update.htm
@@ -34,6 +34,18 @@
                     <?= e(trans('backend::lang.form.save_and_close')) ?>
                 </button>
                 <button
+                        type="button"
+                        data-toggle="modal"
+                        href="#previewModal"
+                        data-size="large"
+                        data-request="onPreview"
+                        data-load-indicator="Loading"
+                        data-request-update="dashboard_renderer: '#previewModal .modal-body'"
+                        data-hotkey="ctrl+p, cmd+p"
+                        class="btn btn-default">
+                    Preview
+                </button>
+                <button
                     type="button"
                     class="oc-icon-trash-o btn-icon danger pull-right"
                     data-request="onDelete"
@@ -52,3 +64,14 @@
     <p class="flash-message static error"><?= e(trans($this->fatalError)) ?></p>
     <p><a href="<?= Backend::url('demo/report/dashboardcontroller') ?>" class="btn btn-default"><?= e(trans('backend::lang.form.return_to_list')) ?></a></p>
 <?php endif ?>
+<div class="preview">
+    <div class="control-popup modal fade" id="previewModal" tabindex="-1" role="dialog" style="width:100%;height: 100%;">
+        <div class="modal-dialog" style="width:80%;height: 70%;">
+            <div class="modal-content" style="width:100%;height: 100%;">
+                <div class="modal-body" style="width:100%;height: 100%;">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
