--- a/www/plugins/demo/report/controllers/widgetcontroller/update.htm
+++ b/www/plugins/demo/report/controllers/widgetcontroller/update.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
 <ul>
-    <li><a href="<?= Backend::url('demo/report/reportcontroller') ?>">ReportController</a></li>
+    <li><a href="<?= Backend::url('demo/report/widgetcontroller') ?>">ReportController</a></li>
     <li><?= e($this->pageTitle) ?></li>
 </ul>
 <?php Block::endPut() ?>
@@ -40,7 +40,7 @@
                     data-size="large"
                     data-request="onPreview"
                     data-load-indicator="Loading"
-                    data-request-update="report_renderer: '#previewModal .modal-body'"
+                    data-request-update="widget_renderer: '#previewModal .modal-body'"
                     data-hotkey="ctrl+p, cmd+p"
                     class="btn btn-default">
                 Preview
@@ -55,7 +55,7 @@
 
             <span class="btn-text">
                     <?= e(trans('backend::lang.form.or')) ?> <a
-                        href="<?= Backend::url('demo/report/reportcontroller') ?>"><?= e(trans('backend::lang.form.cancel')) ?></a>
+                        href="<?= Backend::url('demo/report/widgetcontroller') ?>"><?= e(trans('backend::lang.form.cancel')) ?></a>
                 </span>
         </div>
     </div>
@@ -63,7 +63,7 @@
 
 <?php else: ?>
     <p class="flash-message static error"><?= e(trans($this->fatalError)) ?></p>
-    <p><a href="<?= Backend::url('demo/report/reportcontroller') ?>"
+    <p><a href="<?= Backend::url('demo/report/widgetcontroller') ?>"
           class="btn btn-default"><?= e(trans('backend::lang.form.return_to_list')) ?></a></p>
 <?php endif ?>
 <div class="preview">
