--- a/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
+++ b/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
@@ -1,3 +1,4 @@
+<?php $this->addJs('/plugins/demo/core/controllers/javascriptlibrarycontroller/assets/js/engine.js') ?>
 <?php $this->addCss('/plugins/demo/report/controllers/dashboardcontroller/assets/css/gridstack.min.css') ?>
 <?php $this->addJs('/plugins/demo/report/controllers/dashboardcontroller/assets/js/gridstack.all.js') ?>
 <?php $this->addJs('/plugins/demo/report/controllers/dashboardcontroller/assets/js/dashboard.data.js') ?>
@@ -87,6 +88,9 @@
         right: 0;
         top: 0;
         z-index: 9999;
+    }
+    .grid-stack>.grid-stack-item>.grid-stack-item-content{
+        overflow: hidden;
     }
 </style>
 <script>
