--- a/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
+++ b/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
@@ -88,6 +88,8 @@
     }
     .grid-stack>.grid-stack-item>.grid-stack-item-content{
         overflow: hidden;
+        background-color: white;
+        /*padding: 10px 10px 10px 10px;*/
     }
 </style>
 <script>
