--- a/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
+++ b/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
@@ -18,7 +18,15 @@ $randomId = substr(md5(mt_rand()), 0, 7);
 <?php } ?>
 <div id="widget-container-<?= $randomId ?>" style="height: 100%;width: 100%;" class="widget-container"
      data-widget-id="<?= $widget->id ?>">
+    <div class="widget-header">
+        <h3></h3>
+        <div class="widget-toolbar">
+        </div>
+    </div>
+    <div class="widget-body" style="width: 100%; height: 100%;">
 
+    </div>
+    <div class="widget-footer"></div>
 </div>
 
 <script>
