Report UI iprovement

--- a/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
+++ b/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
@@ -88,6 +88,7 @@
         overflow: hidden;
         background-color: white;
         /*padding: 10px 10px 10px 10px;*/
+        box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.4);
     }
 
     .grid-stack > .grid-stack-item > .ui-resizable-se, .grid-stack > .grid-stack-item > .ui-resizable-sw {
