--- a/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
+++ b/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
@@ -1,3 +1,4 @@
+<?php $this->addJs('/plugins/demo/core/controllers/javascriptlibrarycontroller/assets/js/engine.js') ?>
 <?php
 $randomId = substr(md5(mt_rand()), 0, 7);
 ?>
