--- a/www/plugins/demo/casemanager/controllers/casecontroller/update.htm
+++ b/www/plugins/demo/casemanager/controllers/casecontroller/update.htm
@@ -42,6 +42,7 @@
                         data-request="onPushCase"
                         data-hotkey="ctrl+shift+enter, cmd+shift+enter"
                         data-request-flash
+                        data-request-success="$(this).hide()"
                         data-load-indicator="<?= e(trans('demo.casemanager::lang.workflow.submit')) ?>"
                         data-request-confirm="<?= e(trans('demo.casemanager::lang.workflow.confirm_push')) ?>">
                     <?= e(trans('demo.casemanager::lang.workflow.push')) ?>
