--- a/www/plugins/demo/core/controllers/baseenginecontroller/_list_container.htm
+++ b/www/plugins/demo/core/controllers/baseenginecontroller/_list_container.htm
@@ -7,11 +7,15 @@
             <div class="engine-actions">
                 <script>
                     var actions = <?=$this->getListActions()->toJSON()?>;
+                    var modelRecord = <?=$this->getModelRecord()->toJSON()?>;
                     actions = actions.map(function (action) {
                         action.css_class = 'btn btn-primary ' + action.css_class + ' ' + action.icon;
                         action.handler = Function(action.script);
                         action.id = 'list-action-' + action.id;
+                        action.attributes = action.html_attributes;
+                        action.modelRecord = modelRecord;
                         delete action.icon;
+                        delete action.html_attributes;
                         return action;
                     });
                     Engine.instance.addActions($('.engine-list-toolbar .toolbar-item').children().eq(0),actions);
