--- a/www/plugins/demo/core/controllers/baseenginecontroller/_form.htm
+++ b/www/plugins/demo/core/controllers/baseenginecontroller/_form.htm
@@ -4,11 +4,15 @@
     <?= $this->makePartial($view, ['contents' => $contents]); ?>
     <script>
         var actions = <?=$this->getFormActions($context)->toJSON()?>;
+        var modelRecord = <?=$this->getModelRecord()->toJSON()?>;
         actions = actions.map(function (action) {
             action.css_class = 'btn btn-primary ' + action.css_class + ' ' + action.icon;
             action.handler = Function(action.script);
             action.id = 'list-action-' + action.id;
+            action.attributes = action.html_attributes;
+            action.modelRecord = modelRecord;
             delete action.icon;
+            delete action.html_attributes;
             return action;
         });
         Engine.instance.addActions($('.engine-form-wrapper .form-buttons .loading-indicator-container'), actions);
