--- a/www/plugins/demo/core/controllers/baseenginecontroller/_form.htm
+++ b/www/plugins/demo/core/controllers/baseenginecontroller/_form.htm
@@ -1,20 +1,13 @@
 <?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
 <?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.js') ?>
+<?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.ui.js') ?>
 <div class="engine-form-wrapper">
     <?= $this->makePartial($view, ['contents' => $contents]); ?>
     <script>
         var actions = <?=$this->getFormActions($context)->toJSON()?>;
         var modelRecord = <?=$this->getModelRecord()->toJSON()?>;
-        actions = actions.map(function (action) {
-            action.css_class = 'btn btn-primary ' + action.css_class + ' ' + action.icon;
-            action.handler = Function(action.script);
-            action.id = 'list-action-' + action.id;
-            action.attributes = action.html_attributes;
-            action.modelRecord = modelRecord;
-            delete action.icon;
-            delete action.html_attributes;
-            return action;
-        });
-        Engine.instance.addActions($('.engine-form-wrapper .form-buttons .loading-indicator-container'), actions);
+        var controller = <?=json_encode($this->getControllerInfo())?>;
+        EngineUI.instance.setCurrentModel(modelRecord);
+        EngineFrom.instance.addFormActions(actions,modelRecord);
     </script>
 </div>
