--- a/www/plugins/demo/core/controllers/baseenginecontroller/_list_container.htm
+++ b/www/plugins/demo/core/controllers/baseenginecontroller/_list_container.htm
@@ -7,11 +7,12 @@
             <?= $toolbar->render() ?>
             <div class="engine-actions">
                 <script>
+                    $('.engine-list-wrapper .toolbar-primary .btn').remove(); // removing cms buttons
                     var actions = <?=$this->getListActions()->toJSON()?>;
                     var modelRecord = <?=$this->getModelRecord()->toJSON()?>;
                     var controller = <?=json_encode($this->getControllerInfo())?>;
                     EngineUI.instance.setModelRecord(modelRecord);
-                    EngineList.instance.addListActions(actions,modelRecord);
+                    EngineList.instance.addListActions(actions, modelRecord);
                 </script>
             </div>
         </div>
