--- a/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
+++ b/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
@@ -1,3 +1,6 @@
+<?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
+<?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.js') ?>
+<?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.ui.js') ?>
 <?php
 $randomId = substr(md5(mt_rand()), 0, 7);
 ?>
