--- a/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
+++ b/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
@@ -28,7 +28,7 @@ $randomId = substr(md5(mt_rand()), 0, 7);
             <div class="default-toolbar"></div>
         </div>
     </div>
-    <div class="widget-body" style="width: 100%; height: 100%;">
+    <div class="widget-body" style="width: 100%; height: 500px;">
 
     </div>
     <div class="widget-footer"></div>
@@ -38,12 +38,12 @@ $randomId = substr(md5(mt_rand()), 0, 7);
         cursor: move;
     }
     .widget-container {
-        box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.4);
+        /*box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.4);*/
         position: relative;
         border-radius: 0px;
-        background: #ffffff;
-        border-top: 3px solid #759ec7;
-        margin-bottom: 20px;
+        background: transparent;
+        /*border-top: 3px solid #759ec7;*/
+       /* margin-bottom: 20px;*/
         width: 100%;
     }
 
