--- a/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
+++ b/www/plugins/demo/report/controllers/widgetcontroller/_widget_renderer.htm
@@ -12,14 +12,14 @@ $randomId = substr(md5(mt_rand()), 0, 7);
 } ?>
 <?php $this->addJs('/plugins/demo/report/controllers/widgetcontroller/assets/js/widget.data.js') ?>
 <?php if ($preview === true) { ?>
-    <a class="preview-link" href="../render-widget/<?= $widget->id ?>" style="margin: 0;auto;">View</a>
+    <a class="preview-link" href="../render/<?= $widget->id ?>" style="margin: 0;auto;">View</a>
 <?php } ?>
 <?php if ($dashboard === true) { ?>
     <button type="button" class="close widget-control close-widget" data-dismiss="popover"
             aria-hidden="true">×
     </button>
 <?php } ?>
-<div id="widget-container-<?= $randomId ?>" style="height: 100%;width: 100%;" class="widget-container"
+<div id="widget-container-<?= $randomId ?>" style="height: 100vh;width: 100%;" class="widget-container"
      data-widget-id="<?= $widget->id ?>">
     <div class="widget-header">
         <h3 class="widget-title"></h3>
@@ -28,7 +28,7 @@ $randomId = substr(md5(mt_rand()), 0, 7);
             <div class="default-toolbar"></div>
         </div>
     </div>
-    <div class="widget-body" style="width: 100%; height: 500px;">
+    <div class="widget-body" style="width: 100%; height: 100vh;">
 
     </div>
     <div class="widget-footer"></div>
