--- a/www/plugins/demo/core/controllers/baseenginecontroller/_form.htm
+++ b/www/plugins/demo/core/controllers/baseenginecontroller/_form.htm
@@ -16,6 +16,7 @@ $modelRecord = $this->getModelRecord();
         var controller = <?=json_encode($this->getControllerInfo())?>;
         Engine.instance.ui.setModel(modelRecord);
         var form = EngineForm.getCurrentForm();
+        form.setFormModel(formModel);
         form.addActions(actions);
     </script>
 </div>
