--- a/www/plugins/demo/workflow/controllers/queueitemcontroller/preview.htm
+++ b/www/plugins/demo/workflow/controllers/queueitemcontroller/preview.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('demo/workflow/queueitem') ?>">QueueItem</a></li>
+        <li><a href="<?= Backend::url('demo/workflow/queueitemcontroller') ?>">QueueItem</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
@@ -16,7 +16,7 @@
 <?php endif ?>
 
 <p>
-    <a href="<?= Backend::url('demo/workflow/queueitem') ?>" class="btn btn-default oc-icon-chevron-left">
+    <a href="<?= Backend::url('demo/workflow/queueitemcontroller') ?>" class="btn btn-default oc-icon-chevron-left">
         <?= e(trans('backend::lang.form.return_to_list')) ?>
     </a>
 </p>
