--- a/www/plugins/demo/workflow/controllers/queueitemcontroller/reorder.htm
+++ b/www/plugins/demo/workflow/controllers/queueitemcontroller/reorder.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('demo/workflow/queueitem') ?>">QueueItem</a></li>
+        <li><a href="<?= Backend::url('demo/workflow/queueitemcontroller') ?>">QueueItem</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
