--- a/www/plugins/demo/core/controllers/baseenginecontroller/_form.htm
+++ b/www/plugins/demo/core/controllers/baseenginecontroller/_form.htm
@@ -8,6 +8,7 @@ $modelRecord = $this->getModelRecord();
 <div class="engine-form-wrapper">
     <?= $this->makePartial($view, ['contents' => $contents]); ?>
     <script>
+        window.me = {id:<?=$this->user->id?>};
         $('.form-buttons .loading-indicator-container').prepend('<div class="actions"></div>').find('>button').remove();
         var actions = <?=$formActions ? $formActions->toJSON() : '[]'?>;
         var modelRecord = <?=$modelRecord ? $modelRecord->toJSON() : 'null'?>;
