--- a/www/plugins/demo/core/controllers/baseenginecontroller/_list_container.htm
+++ b/www/plugins/demo/core/controllers/baseenginecontroller/_list_container.htm
@@ -31,6 +31,7 @@
     $modelRecord = $this->getModelRecord();
     ?>
     <script>
+        window.me = {id:<?=$this->user->id?>};
         $('.engine-list-wrapper .toolbar-primary .btn').remove(); // removing cms buttons
         var actions = <?=$listActions ? $listActions->toJSON() : '[]'?>;
         var modelRecord = <?=$modelRecord ? $modelRecord->toJSON() : 'null'?>;
