--- a/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
+++ b/www/plugins/demo/report/controllers/dashboardcontroller/_dashboard_renderer.htm
@@ -90,13 +90,10 @@
         z-index: 9999;
     }
 
-    /*.grid-stack > .grid-stack-item > .grid-stack-item-content {
-        overflow: hidden;
+    .grid-stack > .grid-stack-item > .grid-stack-item-content {
         background-color: white;
-        padding: 10px 10px 10px 10px;
-        box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.4);
-        margin: 5px 5px 5px 5px;
-    }*/
+        box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
+    }
     .grid-stack > .grid-stack-item > .grid-stack-item-content {
         overflow: hidden;
     }
